# Homework_8

./: CMakeLists.txt  CMakeSettings.json
.github/workflows/: CI.yml
SpaceBattle/: CMakeLists.txt  CommandException.cpp  CommandException.h  ExceptionHandler.cpp  ExceptionHandler.h  UObject.h
SpaceBattle/CmdExecutor/: CMakeLists.txt  CmdExecutor.cpp  CmdExecutor.h  ICmdQueue.h  ThreadSafeCmdQueue.cpp  ThreadSafeCmdQueue.h
SpaceBattle/CmdExecutor/Commands/: HardStopExecutorCommand.cpp  HardStopExecutorCommand.h  SoftStopExecutorCommand.cpp  SoftStopExecutorCommand.h  StartExecutorCommand.cpp  StartExecutorCommand.h
SpaceBattle/IoCContainer/: CMakeLists.txt  ScopeTree.cpp  ScopeTree.h
SpaceBattle/IoCContainer/IoCCore/: CMakeLists.txt  IFunctor.h  IoC.cpp  IoC.h
SpaceBattle/ServerEndpoint/: CMakeLists.txt  KafkaConsumer.cpp  KafkaConsumer.h
Test/: CMakeLists.txt  GameAgentMessageHandlerTest.cpp  InitTestsStaticEnvironment.cpp  InterpretCommandTest.cpp  KafkaConsumerTest.cpp
